Fix article on mobile

--- a/styles/witcher2_style.css
+++ b/styles/witcher2_style.css
@@ -307,7 +307,7 @@ article p {
     article {
         width: 90%;
         margin: 50px 0 20px 0;
-        padding-top: 100%;
+        padding-top: 1100px;
     }
     .table_contents {
         width: 250px;
